force-app/main/default/objects/redwing__Answer_Sequence_Item__c/fields/redwing__Answer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>redwing__Answer_Feedback__c</fullName>
    <inlineHelpText>Answer-level feedback that will be shown for users on the Response Summary page if this answer will be selected.</inlineHelpText>
    <label>Answer Feedback</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>