force-app/main/default/objects/redwing__Answer_Sequence_Item__c/fields/redwing__Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>redwing__Answer_Text__c</fullName>
    <label>Answer Text</label>
    <type>TextArea</type>
</CustomField>