force-app/main/default/objects/redwing__Answer_Sequence_Item__c/fields/redwing__Is_Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>redwing__Is_Correct_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Correct Answer</label>
    <type>Checkbox</type>
</CustomField>