force-app/main/default/objects/redwing__Answer_Sequence_Item__c/fields/redwing__Item_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>Answer Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>